<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.skymatic</groupId>
	<artifactId>javafx11-test</artifactId>
	<version>1.0.0</version>

	<properties>
		<javafx.version>11.0.1</javafx.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>${javafx.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>copy-libs</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/libs</outputDirectory>
							<includeScope>runtime</includeScope>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- jlink -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<executions>
					<execution>
						<id>create-custom-runtime</id>
						<phase>package</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>${java.home}/bin/jlink</executable>
							<workingDirectory>${project.build.directory}</workingDirectory>
							<longModulepath>false</longModulepath> <!-- fix for https://github.com/mojohaus/exec-maven-plugin/issues/75 -->
							<arguments>
								<argument>--module-path</argument>
								<argument>${java.home}/jmods:${project.build.directory}/libs:${project.build.outputDirectory}</argument>
								<argument>--verbose</argument>
								<argument>--compress</argument>
								<argument>2</argument>
								<argument>--no-header-files</argument>
								<argument>--strip-debug</argument>
								<argument>--no-man-pages</argument>
								<argument>--output</argument>
								<argument>runtime</argument>
								<argument>--add-modules</argument>
								<argument>de.skymatic.javafx11test</argument>
								<argument>--launcher</argument>
								<argument>command=de.skymatic.javafx11test/de.skymatic.javafx11test.Main</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>